--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -2,7 +2,7 @@
   border-bottom: 1px solid #ececec;
 }
 
-.header__conteiner,
+.header__container,
 .navigation {
   display: flex;
   align-items: center;
