--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -49,7 +49,7 @@
   text-align: center;
   letter-spacing: 0.06em;
 
-  & .conteiner {
+  & .container {
     @media screen and (min-width: 480px) {
       max-width: 373px;
     }
