--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,7 +6,7 @@
 
 // BASE
 @import './base/common';
-@import './base/conteiner';
+@import './base/container';
 
 // COMPONENTS
 @import './components/logo';
@@ -17,6 +17,8 @@
 @import './components/backdrop';
 @import './components/modal';
 @import './components/modal-form';
+@import './components/mobile-menu';
+@import './components/burger-btn';
 
 // LAYOUT
 @import './layout/header';
