--- a/css/main.css
+++ b/css/main.css
@@ -99,13 +99,6 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
-  .section {
-    padding-top: 60px;
-    padding-bottom: 60px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .section {
     padding-top: 94px;
@@ -116,12 +109,12 @@ body {
 .container {
   padding-right: 15px;
   padding-left: 15px;
+  margin: 0 auto;
 }
 
 @media screen and (min-width: 480px) {
   .container {
     width: 480px;
-    margin: 0 auto;
   }
 }
 
@@ -390,7 +383,7 @@ body {
   color: var(--secondary-text-color);
 }
 
-.modal-form-field-element {
+.modal-form-element {
   position: relative;
   display: block;
   margin-top: 4px;
@@ -444,9 +437,26 @@ body {
   justify-content: center;
   margin-bottom: var(--set-gap);
   font-size: 10px;
-  line-height: 1.167;
+  font-weight: 400;
+  line-height: 1.2;
   text-align: center;
   color: var(--secondary-text-color);
+}
+
+@media screen and (min-width: 480px) {
+  .modal-form-checkbox-label {
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 1.27;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form-checkbox-label {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.71;
+  }
 }
 
 .modal-form-checkbox-label::before {
@@ -479,8 +489,8 @@ body {
 }
 
 .modal-form-btn {
-  font-weight: 700;
   font-size: 16px;
+  font-weight: 700;
   line-height: 1.88;
   margin: 0 auto;
   padding: 10px 56px;
@@ -563,22 +573,21 @@ body {
 }
 
 .mobile-contact-list__link {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
   letter-spacing: 0.02em;
 }
 
 .tel {
   font-size: 8vw;
+  font-weight: 500px;
   line-height: 40px;
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
 .mail {
   font-size: 24px;
-  line-height: 28px;
-  color: #757575;
+  font-weight: 500;
+  line-height: 1.17;
+  color: var(--secondary-text-color);
 }
 
 .mobile-social-list {
@@ -598,13 +607,11 @@ body {
 
 .mobile-social-list__link {
   padding-right: 10px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
   font-size: 18px;
-  line-height: 22px;
+  font-weight: 500;
+  line-height: 1.22;
   letter-spacing: 0.02em;
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
 .burger-btn {
@@ -613,6 +620,7 @@ body {
   height: 40px;
   background-color: transparent;
   border: none;
+  transition: fill 250ms var(--function-transition);
 }
 
 .burger-btn:hover, .burger-btn:focus {
@@ -790,56 +798,48 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  max-width: 480px;
+  background-color: var(--accent-background);
+  max-width: 1600px;
   padding: 118px 0;
   margin: 0 auto;
-  background-color: var(--accent-background);
   text-align: center;
   letter-spacing: 0.06em;
 }
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../images/hero/hero-mobile@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-mobile@2x.jpg");
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 480.98px) {
   .hero {
-    max-width: 768px;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero-tablet.jpg);
   }
 }
 
-@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 480.98px) and (min-device-pixel-ratio: 2), screen and (min-width: 480.98px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480.98px) and (min-resolution: 192dpi), screen and (min-width: 480.98px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../images/hero/hero-tablet@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-tablet@2x.jpg");
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768.98px) {
   .hero {
-    max-width: 1600px;
     padding: 200px 0;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero-desktop.jpg);
   }
 }
 
-@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768.98px) and (min-device-pixel-ratio: 2), screen and (min-width: 768.98px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768.98px) and (min-resolution: 192dpi), screen and (min-width: 768.98px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../../images/hero/hero-desktop@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero/hero-desktop@2x.jpg");
   }
 }
 
 @media screen and (min-width: 480px) {
   .hero .container {
-    max-width: 373px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero .container {
-    max-width: 373px;
+    max-width: 360px;
   }
 }
 
@@ -895,18 +895,12 @@ body {
   background-color: var(--button-color);
 }
 
-.feature-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: calc(-1 * var(--set-gap));
-  margin-bottom: calc(-1 * var(--set-gap));
-}
-
-@media screen and (min-width: 480px) {
-  .feature-list__item {
-    flex-basis: calc(100% / 1 - var(--set-gap));
-    margin-right: var(--set-gap);
-    margin-bottom: var(--set-gap);
+@media screen and (min-width: 768px) {
+  .feature-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-1 * var(--set-gap));
+    margin-bottom: calc(-1 * var(--set-gap));
   }
 }
 
@@ -1003,25 +997,19 @@ body {
   background-color: var(--secondary-background);
 }
 
-.team-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: calc(-1 * var(--set-gap));
-  margin-bottom: calc(-1 * var(--set-gap));
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-1 * var(--set-gap));
+    margin-bottom: calc(-1 * var(--set-gap));
+  }
 }
 
 .team-list-item {
   background-color: var(--accessary-color);
   box-shadow: var(--box-shadow-card);
   border-radius: 0px 0px 4px 4px;
-}
-
-@media screen and (min-width: 480px) {
-  .team-list-item {
-    flex-basis: calc(100% / 1 - var(--set-gap));
-    margin-right: var(--set-gap);
-    margin-bottom: var(--set-gap);
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -1037,6 +1025,12 @@ body {
     flex-basis: calc(100% / 4 - var(--set-gap));
     margin-right: var(--set-gap);
     margin-bottom: var(--set-gap);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .team-list-item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
@@ -1358,24 +1352,18 @@ body {
   }
 }
 
-.gallery-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: calc(-1 * var(--set-gap));
-  margin-bottom: calc(-1 * var(--set-gap));
+@media screen and (min-width: 768px) {
+  .gallery-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-1 * var(--set-gap));
+    margin-bottom: calc(-1 * var(--set-gap));
+  }
 }
 
 .gallery-list-item {
   display: flex;
   flex-direction: column;
-}
-
-@media screen and (min-width: 480px) {
-  .gallery-list-item {
-    flex-basis: calc(100% / 1 - var(--set-gap));
-    margin-right: var(--set-gap);
-    margin-bottom: var(--set-gap);
-  }
 }
 
 @media screen and (min-width: 768px) {
