--- a/sass/components/_burger-btn.scss
+++ b/sass/components/_burger-btn.scss
@@ -4,6 +4,7 @@
   height: 40px;
   background-color: transparent;
   border: none;
+  transition: fill 250ms var(--function-transition);
 
   &:hover,
   &:focus {
