--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -53,6 +53,9 @@ body {
 }
 
 .section {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   @media screen and (min-width: 480px) {
     padding-top: 60px;
     padding-bottom: 60px;
