--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,7 +6,7 @@
 
 .footer-content {
   display: flex;
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     flex-direction: column;
     align-items: center;
   }
@@ -25,7 +25,7 @@
 }
 
 .address {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     margin: 0 auto;
   }
 
@@ -40,7 +40,7 @@
 
   color: var(--accessary-color);
 
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     text-align: center;
     padding: 0;
   }
@@ -55,7 +55,7 @@
 }
 
 .contact-blok {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     text-align: center;
   }
 
@@ -65,7 +65,7 @@
 }
 
 .contact-blok__item:not(:last-child) {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     margin-bottom: 8px;
   }
 
@@ -91,7 +91,7 @@
 }
 
 .social {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     margin-top: 60px;
     margin-bottom: 60px;
   }
@@ -99,7 +99,7 @@
 
 .social__title,
 .subscription-form__title {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     text-align: center;
   }
 
@@ -121,7 +121,7 @@
 }
 
 .subscription-form {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     display: flex;
     flex-direction: column;
   }
@@ -132,9 +132,13 @@
 }
 
 .subscription-form__input {
+  @media screen and (min-width: 320px) {
+    width: 300px;
+    margin-bottom: 20px;
+  }
+
   @media screen and (min-width: 480px) {
     width: 450px;
-    margin-bottom: 20px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -199,7 +203,7 @@
 }
 
 .subscription-form__element {
-  @media screen and (min-width: 480px) {
+  @media screen and (min-width: 320px) {
     flex-direction: column;
   }
 
