--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -7,6 +7,9 @@
 .gallery-list-item {
   display: flex;
   flex-direction: column;
+  @media screen and (max-width: 479px) {
+    margin-top: 20px;
+  }
 
   @media screen and (min-width: 768px) {
     @include flex-item(calc(100% / 2 - var(--set-gap)));
