--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@ body {
   color: var(--accent-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 1199px) {
   .logo {
     font-size: 24px;
     font-weight: 700;
@@ -388,7 +388,7 @@ body {
   color: var(--secondary-text-color);
 }
 
-.modal-form-element {
+.modal-form-field-element {
   position: relative;
   display: block;
   margin-top: 4px;
@@ -582,10 +582,16 @@ body {
 }
 
 .tel {
-  font-size: 8vw;
-  font-weight: 500px;
-  line-height: 40px;
+  font-size: 34px;
+  font-weight: 500;
+  line-height: 1.18;
   color: var(--accent-color);
+}
+
+@media screen and (max-width: 479px) {
+  .tel {
+    font-size: 8vw;
+  }
 }
 
 .mail {
@@ -831,7 +837,6 @@ body {
 
 @media screen and (min-width: 768.98px) {
   .hero {
-    padding: 200px 0;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../../images/hero/hero-desktop.jpg);
   }
 }
@@ -842,9 +847,15 @@ body {
   }
 }
 
+@media screen and (min-width: 768.98px) and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+  }
+}
+
 @media screen and (min-width: 480px) {
   .hero .container {
-    max-width: 360px;
+    max-width: 373px;
   }
 }
 
@@ -860,7 +871,7 @@ body {
   color: var(--accessary-color);
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .hero__title {
     font-size: 26px;
     font-weight: 900;
@@ -945,7 +956,7 @@ body {
   margin-bottom: 10px;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 320px) {
   .feature-list__subtitle {
     text-align: center;
   }
@@ -1425,11 +1436,11 @@ body {
 
 .description {
   padding: 20px 24px;
+  padding-right: 0;
   background-color: var(--accessary-color);
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
-  flex-grow: 1;
 }
 
 .gallery-link {
