--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -20,7 +20,7 @@
   color: var(--secondary-text-color);
 }
 
-.modal-form-element {
+.modal-form-field-element {
   position: relative;
   display: block;
   margin-top: 4px;
