--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -34,12 +34,11 @@
 
 .description {
   padding: 20px 24px;
+  padding-right: 0;
   background-color: var(--accessary-color);
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
-
-  flex-grow: 1;
 }
 
 .gallery-link {
